@@ -1,0 +1,5 @@
+ATS
+
+pass	issue	fail	blocked	skip	test
+Test passed
+
