@@ -1,7 +1,7 @@
  	Forum	Last Post	Threads	Posts
 English Forums
  	Main Discussion
-	 Want to communicate with other local fans? Do it here, too!	 Today 03:52pm	381	23,437
+Want to communicate with other local fans? Do it here, too!	 Today 03:52pm	381	23,437
 
 
 
